Titanic_data_analysis - classification

--- a/Titanic_data_analysis.ipynb
+++ b/Titanic_data_analysis.ipynb
@@ -727,7 +727,7 @@
     }
    ],
    "source": [
-    "df_tmp['Sex'] = np.where(df_tmp['Sex'] == 'female', 1, 0) # change sex to 0 for male and 1 for female\n",
+    "df_tmp['Sex'] = np.where(df_tmp['Sex'] == 'female', 1, 0) # 1 - Female, 0 - Male\n",
     "df_tmp.head()"
    ]
   },
@@ -1286,7 +1286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test['Sex'] = np.where(df_test['Sex'] == 'female', 1, 0) # change sex to 0 for male and 1 for female"
+    "df_test['Sex'] = np.where(df_test['Sex'] == 'female', 1, 0) # 1 - Female, 0 - Male"
    ]
   },
   {
